apps/bgdk/overlays/bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgdk
  name: bgdk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgdk
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgdk
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgdk:1.0.0
        name: bgdk
        resources: {}
---
