apps/bgdk/overlays/bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgdk
  name: bgdk
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgdk
    weight: 100
